+ Private dependencies; no longer relying on what Joomla includes in its vendors folder

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,13 +2,11 @@ Passwordless Login 2.0.0
 --------------------------------------------------------------------------------
 - Removed cookie which remembers the last logged in user
 ~ Change plugin namespace
-~ Joomla 5 preparation: Use DatabaseInterface instead of DatabaseDriver
-~ Joomla 5 preparation: Work around backwards incompatible changes in core plugin events
-~ Joomla 5 preparation: Normalise plugin event calling
 + Support for passkeys (resident, synchronised authenticators)
 + Support for TouchID/FaceID on newer Apple mobile devices (iOS 15.4+)
 + User-controlled option to disable logins with password
 + Migration from Joomla's WebAuthn
++ Private dependencies; no longer relying on what Joomla includes in its vendors folder
 
 Passwordless Login 1.0.1
 --------------------------------------------------------------------------------
