+ Passkey auto-detection

--- a/plugins/system/passwordless/language/en-GB/plg_system_passwordless.ini
+++ b/plugins/system/passwordless/language/en-GB/plg_system_passwordless.ini
@@ -1,15 +1,15 @@
 ;; Akeeba Passwordless Login - Passwordless authentication for Joomla!
-;; Copyright (c)2016-2023 Nicholas K. Dionysopoulos / Akeeba Ltd
+;; Copyright (c)2024 Nicholas K. Dionysopoulos / Akeeba Ltd
 ;; Licensed under the terms of the GNU General Public License v3 or later
 
 PLG_SYSTEM_PASSWORDLESS="System - Akeeba Passwordless Login"
 PLG_SYSTEM_PASSWORDLESS_DESCRIPTION="Allows users to log into the site with passkeys (no username or password needed) and WebAuthn authenticators (you need your username, but not a password)."
 
-PLG_SYSTEM_PASSWORDLESS_FIELD_SHOWIMAGES_LABEL="Show images"
-PLG_SYSTEM_PASSWORDLESS_FIELD_SHOWIMAGES_DESC="Should I display the logo of the authenticator maker next to the authenticator name? The logo only works for authenticators added while the Attestation Support option is enabled. All other authenticators will display a generic FIDO logo."
-
 PLG_SYSTEM_PASSWORDLESS_FIELD_JOOMLAWEBAUTHN_LABEL="Auto-migrate Joomla WebAuthn credentials"
 PLG_SYSTEM_PASSWORDLESS_FIELD_JOOMLAWEBAUTHN_DESC="Set to Yes and save the plugin to automatically migrate authenticators registered with Joomla's built-in ‘System - WebAuthn Passwordless Login’ plugin.<br/><strong>IMPORTANT INFORMATION</strong>: Set to Yes and click on Save. When the page reloads the option will appear again as No. <strong>This is normal and expected!</strong>. When you set to Yes and Save the plugin will do the following: move all entries from the WebAuthn plugin's storage (<code>#__webauthn_authenticators</code> database table) to the Passwordless plugin's storage (<code>#__passwordless_authenticators</code> database table); unpublish Joomla's WebAuthn; <em>reset this option back to No</em>."
+
+PLG_SYSTEM_PASSWORDLESS_FIELD_AUTODETECT_LABEL="Auto-detect passkeys"
+PLG_SYSTEM_PASSWORDLESS_FIELD_AUTODETECT_DESC="Enabling this option will prompt the user to log into the site with a passkey as long as the browser detects there's one or more passkeys for this site, and at least one of these passkeys contains a username. Disable this option to require the user to manually click on the login button to start the passkey authentication."
 
 PLG_SYSTEM_PASSWORDLESS_LOGIN_LABEL="Login with passkey"
 PLG_SYSTEM_PASSWORDLESS_LOGIN_DESC="Login with a passkey, without a username or password."
