--- a/plugins/system/passwordless/language/en-GB/plg_system_passwordless.sys.ini
+++ b/plugins/system/passwordless/language/en-GB/plg_system_passwordless.sys.ini
@@ -1,6 +1,6 @@
-;; Akeeba Social Login - A social login solution for Joomla!
-;; Copyright (c)2016-2023 Nicholas K. Dionysopoulos / Akeeba Ltd
+;; Akeeba Passwordless Login - Passwordless authentication for Joomla!
+;; Copyright (c)2024 Nicholas K. Dionysopoulos / Akeeba Ltd
 ;; Licensed under the terms of the GNU General Public License v3 or later
 
-PLG_SYSTEM_PASSWORDLESS="System - Passwordless Login"
+PLG_SYSTEM_PASSWORDLESS="System - Akeeba Passwordless Login"
 PLG_SYSTEM_PASSWORDLESS_DESCRIPTION="Allows users to log into the site with passkeys (no username or password needed) and WebAuthn authenticators (you need your username, but not a password)."
