Plugin toggle for "no password" controls

--- a/plugins/system/passwordless/language/en-GB/plg_system_passwordless.ini
+++ b/plugins/system/passwordless/language/en-GB/plg_system_passwordless.ini
@@ -11,6 +11,9 @@ PLG_SYSTEM_PASSWORDLESS_FIELD_JOOMLAWEBAUTHN_DESC="Set to Yes and save the plugi
 PLG_SYSTEM_PASSWORDLESS_FIELD_AUTODETECT_LABEL="Auto-detect passkeys"
 PLG_SYSTEM_PASSWORDLESS_FIELD_AUTODETECT_DESC="Enabling this option will prompt the user to log into the site with a passkey as long as the browser detects there's one or more passkeys for this site, and at least one of these passkeys contains a username. Disable this option to require the user to manually click on the login button to start the passkey authentication."
 
+PLG_SYSTEM_PASSWORDLESS_FIELD_NOPASSWORD_CONTROLS_LABEL="Allow users to choose password authentication behaviour"
+PLG_SYSTEM_PASSWORDLESS_FIELD_NOPASSWORD_CONTROLS_DESC="When this option is enabled the user is given a “Password authentication” control in their user profile which lets them choose whether they will be allowed to log into the site using a password. Regardless of this setting, users in the “Passkey–only login user groups” will not have this option in their user profile page."
+
 PLG_SYSTEM_PASSWORDLESS_LOGIN_LABEL="Login with passkey"
 PLG_SYSTEM_PASSWORDLESS_LOGIN_DESC="Login with a passkey, without a username or password."
 
