Global default value for the Password authentication field

--- a/plugins/system/passwordless/language/en-GB/plg_system_passwordless.ini
+++ b/plugins/system/passwordless/language/en-GB/plg_system_passwordless.ini
@@ -5,14 +5,27 @@
 PLG_SYSTEM_PASSWORDLESS="System - Akeeba Passwordless Login"
 PLG_SYSTEM_PASSWORDLESS_DESCRIPTION="Allows users to log into the site with passkeys (no username or password needed) and WebAuthn authenticators (you need your username, but not a password)."
 
-PLG_SYSTEM_PASSWORDLESS_FIELD_JOOMLAWEBAUTHN_LABEL="Auto-migrate Joomla WebAuthn credentials"
-PLG_SYSTEM_PASSWORDLESS_FIELD_JOOMLAWEBAUTHN_DESC="Set to Yes and save the plugin to automatically migrate authenticators registered with Joomla's built-in ‘System - WebAuthn Passwordless Login’ plugin.<br/><strong>IMPORTANT INFORMATION</strong>: Set to Yes and click on Save. When the page reloads the option will appear again as No. <strong>This is normal and expected!</strong>. When you set to Yes and Save the plugin will do the following: move all entries from the WebAuthn plugin's storage (<code>#__webauthn_authenticators</code> database table) to the Passwordless plugin's storage (<code>#__passwordless_authenticators</code> database table); unpublish Joomla's WebAuthn; <em>reset this option back to No</em>."
+PLG_SYSTEM_PASSWORDLESS_FIELD_LBL_BEHAVIOUR="Login Behaviour"
 
 PLG_SYSTEM_PASSWORDLESS_FIELD_AUTODETECT_LABEL="Auto-detect passkeys"
-PLG_SYSTEM_PASSWORDLESS_FIELD_AUTODETECT_DESC="Enabling this option will prompt the user to log into the site with a passkey as long as the browser detects there's one or more passkeys for this site, and at least one of these passkeys contains a username. Disable this option to require the user to manually click on the login button to start the passkey authentication."
+PLG_SYSTEM_PASSWORDLESS_FIELD_AUTODETECT_DESC="Enabling this option will have the browser detect if there is a passkey allowing the user to log into this site. Depending on the browser and/or password manager you are using the user will either be prompted to select a passkey upon focusing the username field of the login form, or the browser will present an unobtrusive non-modal interface to the user prompting them to choose a passkey to log into your site."
+
+PLG_SYSTEM_PASSWORDLESS_FIELD_LBL_SECURITY="Security Enhancement"
+
+PLG_SYSTEM_PASSWORDLESS_FIELD_NOPASSWORD_DEFAULT_LABEL="Password authentication"
+PLG_SYSTEM_PASSWORDLESS_FIELD_NOPASSWORD_DEFAULT_DESC="The default preference for password authentication when one or more passkeys are configured in the user account. If “Allow users to choose password authentication behaviour” is enabled this preference can be overridden by each user in their user profile page. If the user belongs in one or more of the “Passkey–only login user groups” this option is ignored; these user accounts will always behave as if “Forbidden” is selected."
 
 PLG_SYSTEM_PASSWORDLESS_FIELD_NOPASSWORD_CONTROLS_LABEL="Allow users to choose password authentication behaviour"
 PLG_SYSTEM_PASSWORDLESS_FIELD_NOPASSWORD_CONTROLS_DESC="When this option is enabled the user is given a “Password authentication” control in their user profile which lets them choose whether they will be allowed to log into the site using a password. Regardless of this setting, users in the “Passkey–only login user groups” will not have this option in their user profile page."
+
+PLG_SYSTEM_PASSWORDLESS_FIELD_NOPASSWORD_GROUPS_LABEL="Passkey–only login user groups"
+PLG_SYSTEM_PASSWORDLESS_FIELD_NOPASSWORD_GROUPS_DESCRIPTION="Users who belong to at least one of the selected user groups will not be allowed to use password authentication as long as they have at least one passkey configured on their user account. You should add your privileged user groups, such as Super Users and Administrators, and ask these users to set up passwordless authentication."
+
+PLG_SYSTEM_PASSWORDLESS_FIELD_LBL_MIGRATION="Data Migration"
+
+PLG_SYSTEM_PASSWORDLESS_FIELD_JOOMLAWEBAUTHN_LABEL="Auto-migrate Joomla WebAuthn credentials"
+PLG_SYSTEM_PASSWORDLESS_FIELD_JOOMLAWEBAUTHN_DESC="Set to Yes and save the plugin to automatically migrate authenticators registered with Joomla's built-in ‘System - WebAuthn Passwordless Login’ plugin.<br/><strong>IMPORTANT INFORMATION</strong>: Set to Yes and click on Save. When the page reloads the option will appear again as No. <strong>This is normal and expected!</strong>. When you set to Yes and Save the plugin will do the following: move all entries from the WebAuthn plugin's storage (<code>#__webauthn_authenticators</code> database table) to the Passwordless plugin's storage (<code>#__passwordless_authenticators</code> database table); unpublish Joomla's WebAuthn; <em>reset this option back to No</em>."
+
 
 PLG_SYSTEM_PASSWORDLESS_LOGIN_LABEL="Login with passkey"
 PLG_SYSTEM_PASSWORDLESS_LOGIN_DESC="Login with a passkey, without a username or password."
@@ -26,6 +39,7 @@ PLG_SYSTEM_PASSWORDLESS_FIELD_NOPASSWORD_DESC="You can forbid logins to your acc
 PLG_SYSTEM_PASSWORDLESS_FIELD_NOPASSWORD_OPT_ALLOW="Allowed"
 PLG_SYSTEM_PASSWORDLESS_FIELD_NOPASSWORD_OPT_DISALLOW="Forbidden"
 PLG_SYSTEM_PASSWORDLESS_FIELD_NOPASSWORD_OPT_CONDITIONAL="Forbidden if I have two or more methods"
+PLG_SYSTEM_PASSWORDLESS_FIELD_NOPASSWORD_OPT_CONDITIONAL_THEIR="Forbidden if the user has two or more methods"
 
 PLG_SYSTEM_PASSWORDLESS_MANAGE_FIELD_KEYLABEL_LABEL="Name"
 PLG_SYSTEM_PASSWORDLESS_MANAGE_FIELD_KEYLABEL_DESC="A short name for your login method."
