Select whether a custom message is shown when password authentication is not allowed.

--- a/plugins/system/passwordless/language/en-GB/plg_system_passwordless.ini
+++ b/plugins/system/passwordless/language/en-GB/plg_system_passwordless.ini
@@ -15,6 +15,9 @@ PLG_SYSTEM_PASSWORDLESS_FIELD_LBL_SECURITY="Security Enhancement"
 PLG_SYSTEM_PASSWORDLESS_FIELD_NOPASSWORD_DEFAULT_LABEL="Password authentication"
 PLG_SYSTEM_PASSWORDLESS_FIELD_NOPASSWORD_DEFAULT_DESC="The default preference for password authentication when one or more passkeys are configured in the user account. If “Allow users to choose password authentication behaviour” is enabled this preference can be overridden by each user in their user profile page. If the user belongs in one or more of the “Passkey–only login user groups” this option is ignored; these user accounts will always behave as if “Forbidden” is selected."
 
+PLG_SYSTEM_PASSWORDLESS_FIELD_NOPASSWORD_USE_CUSTOM_MESSAGE_LABEL="Use custom message if password authentication is not allowed"
+PLG_SYSTEM_PASSWORDLESS_FIELD_NOPASSWORD_USE_CUSTOM_MESSAGE_DESC="When set to Yes and a user tries to use password authentication when not allowed to they will see a message that they should use passkeys instead. When set to No, the user in this case sees the generic invalid username or password message. The former is much more user-friendly without compromising security (passkeys are unphishable and practically impossible to brute-force), but they do allow attackers figure out which <em>usernames</em> are valid. If your company policy requires you to treat usernames as secrets set this option to No."
+
 PLG_SYSTEM_PASSWORDLESS_FIELD_NOPASSWORD_CONTROLS_LABEL="Allow users to choose password authentication behaviour"
 PLG_SYSTEM_PASSWORDLESS_FIELD_NOPASSWORD_CONTROLS_DESC="When this option is enabled the user is given a “Password authentication” control in their user profile which lets them choose whether they will be allowed to log into the site using a password. Regardless of this setting, users in the “Passkey–only login user groups” will not have this option in their user profile page."
 
