--- a/plugins/system/passwordless/language/en-GB/plg_system_passwordless.ini
+++ b/plugins/system/passwordless/language/en-GB/plg_system_passwordless.ini
@@ -1,5 +1,5 @@
 ;; Akeeba Passwordless Login - Passwordless authentication for Joomla!
-;; Copyright (c)2024 Nicholas K. Dionysopoulos / Akeeba Ltd
+;; Copyright (c)2018-2025 Nicholas K. Dionysopoulos / Akeeba Ltd
 ;; Licensed under the terms of the GNU General Public License v3 or later
 
 PLG_SYSTEM_PASSWORDLESS="System - Akeeba Passwordless Login"
